fix: align center

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,11 @@
   padding-top: 4rem;
 }
 #root > main {
+  display: flex;
+  flex-direction: column;
   min-height: calc(100vh - 11.5rem);
+  align-items: center;
+  justify-content: center;
 }
 
 body {
